lab1/Code/syntax.output
Nonterminals useless in grammar

   ExtDecList


语法中的规则无效

   59 ExtDecList: VarDec
   60           | VarDec COMMA ExtDecList


由于冲突，解析器中的规则不起作用

    3 ExtDefList: ExtDefList


状态 4 conflicts: 1 reduce/reduce
状态 6 conflicts: 1 shift/reduce
状态 14 conflicts: 1 shift/reduce
状态 57 conflicts: 10 shift/reduce
状态 59 conflicts: 10 shift/reduce
状态 87 conflicts: 10 shift/reduce
状态 88 conflicts: 10 shift/reduce
状态 89 conflicts: 10 shift/reduce
状态 90 conflicts: 10 shift/reduce
状态 91 conflicts: 10 shift/reduce
状态 92 conflicts: 10 shift/reduce
状态 93 conflicts: 10 shift/reduce
状态 94 conflicts: 10 shift/reduce
状态 103 conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef
    3           | ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDefList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 Specifier: TYPE
    9          | StructSpecifier

   10 StructSpecifier: STRUCT OptTag LC DefList RC
   11                | STRUCT Tag

   12 OptTag: ID
   13       | %empty

   14 Tag: ID

   15 VarDec: ID
   16       | VarDec LB INT RB

   17 FunDec: ID LP VarList RP
   18       | ID LP RP

   19 VarList: ParamDec COMMA VarList
   20        | ParamDec

   21 ParamDec: Specifier
   22         | VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifier DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | Exp LB Exp RB
   53    | Exp DOT ID
   54    | ID
   55    | INT
   56    | FLOAT

   57 Args: Exp COMMA Args
   58     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
NOT (258) 49
INT (259) 16 55
FLOAT (260) 56
ID (261) 12 14 15 17 18 50 51 53 54
SEMI (262) 5 6 26 28 34
COMMA (263) 19 36 57
ASSIGNOP (264) 38 39
RELOP (265) 42
PLUS (266) 43
MINUS (267) 44 48
STAR (268) 45
DIV (269) 46
AND (270) 40
OR (271) 41
DOT (272) 53
TYPE (273) 8
LP (274) 17 18 29 30 31 47 50 51
RP (275) 17 18 29 30 31 47 50 51
LB (276) 16 52
RB (277) 16 52
LC (278) 10 23
RC (279) 10 23
STRUCT (280) 10 11
RETURN (281) 28
IF (282) 29 30
ELSE (283) 30
WHILE (284) 31


Nonterminals, with rules where they appear

$accept (30)
    左： 0
Program (31)
    左： 1, 右： 0
ExtDefList (32)
    左： 2 3 4, 右： 1 3 5
ExtDef (33)
    左： 5 6 7, 右： 2
Specifier (34)
    左： 8 9, 右： 5 6 7 21 34
StructSpecifier (35)
    左： 10 11, 右： 9
OptTag (36)
    左： 12 13, 右： 10
Tag (37)
    左： 14, 右： 11
VarDec (38)
    左： 15 16, 右： 16 22 37 38
FunDec (39)
    左： 17 18, 右： 7
VarList (40)
    左： 19 20, 右： 17 19
ParamDec (41)
    左： 21 22, 右： 19 20
CompSt (42)
    左： 23, 右： 7 27
StmtList (43)
    左： 24 25, 右： 23 24
Stmt (44)
    左： 26 27 28 29 30 31, 右： 24 29 30 31
DefList (45)
    左： 32 33, 右： 10 23 32
Def (46)
    左： 34, 右： 32
DecList (47)
    左： 35 36, 右： 34 36
Dec (48)
    左： 37 38, 右： 35 36
Exp (49)
    左： 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56, 右：
    26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48 49 52 53 57 58
Args (50)
    左： 57 58, 右： 50 57


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


State 2

   10 StructSpecifier: STRUCT . OptTag LC DefList RC
   11                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 13 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .
    3 ExtDefList: ExtDefList .

    $end      reduce using rule 1 (Program)
    $end      [reduce using rule 3 (ExtDefList)]
    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef .

    $default  reduce using rule 2 (ExtDefList)


State 6

    5 ExtDef: Specifier . ExtDefList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt

    ID      shift, and go to state 12
    SEMI    shift, and go to state 13
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    SEMI  [reduce using rule 4 (ExtDefList)]

    ExtDefList       转到状态 14
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7
    FunDec           转到状态 15


State 7

    9 Specifier: StructSpecifier .

    $default  reduce using rule 9 (Specifier)


State 8

   12 OptTag: ID .
   14 Tag: ID .

    LC        reduce using rule 12 (OptTag)
    $default  reduce using rule 14 (Tag)


State 9

   10 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 16


State 10

   11 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 11 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

   17 FunDec: ID . LP VarList RP
   18       | ID . LP RP

    LP  shift, and go to state 17


State 13

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 14

    3 ExtDefList: ExtDefList .
    5 ExtDef: Specifier ExtDefList . SEMI

    SEMI  shift, and go to state 18

    SEMI  [reduce using rule 3 (ExtDefList)]


State 15

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 19

    CompSt  转到状态 20


State 16

   10 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 21
    StructSpecifier  转到状态 7
    DefList          转到状态 22
    Def              转到状态 23


State 17

   17 FunDec: ID LP . VarList RP
   18       | ID LP . RP

    ID      shift, and go to state 24
    TYPE    shift, and go to state 1
    RP      shift, and go to state 25
    STRUCT  shift, and go to state 2

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    VarDec           转到状态 27
    VarList          转到状态 28
    ParamDec         转到状态 29


State 18

    5 ExtDef: Specifier ExtDefList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

   23 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 21
    StructSpecifier  转到状态 7
    DefList          转到状态 30
    Def              转到状态 23


State 20

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 21

   34 Def: Specifier . DecList SEMI

    ID  shift, and go to state 24

    VarDec   转到状态 31
    DecList  转到状态 32
    Dec      转到状态 33


State 22

   10 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 34


State 23

   32 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        转到状态 21
    StructSpecifier  转到状态 7
    DefList          转到状态 35
    Def              转到状态 23


State 24

   15 VarDec: ID .

    $default  reduce using rule 15 (VarDec)


State 25

   18 FunDec: ID LP RP .

    $default  reduce using rule 18 (FunDec)


State 26

   21 ParamDec: Specifier .

    $default  reduce using rule 21 (ParamDec)


State 27

   16 VarDec: VarDec . LB INT RB
   22 ParamDec: VarDec .

    LB  shift, and go to state 36

    $default  reduce using rule 22 (ParamDec)


State 28

   17 FunDec: ID LP VarList . RP

    RP  shift, and go to state 37


State 29

   19 VarList: ParamDec . COMMA VarList
   20        | ParamDec .

    COMMA  shift, and go to state 38

    $default  reduce using rule 20 (VarList)


State 30

   23 CompSt: LC DefList . StmtList RC

    NOT     shift, and go to state 39
    INT     shift, and go to state 40
    FLOAT   shift, and go to state 41
    ID      shift, and go to state 42
    MINUS   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 19
    RETURN  shift, and go to state 45
    IF      shift, and go to state 46
    WHILE   shift, and go to state 47

    $default  reduce using rule 25 (StmtList)

    CompSt    转到状态 48
    StmtList  转到状态 49
    Stmt      转到状态 50
    Exp       转到状态 51


State 31

   16 VarDec: VarDec . LB INT RB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 52
    LB        shift, and go to state 36

    $default  reduce using rule 37 (Dec)


State 32

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 53


State 33

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 54

    $default  reduce using rule 35 (DecList)


State 34

   10 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 10 (StructSpecifier)


State 35

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 36

   16 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 55


State 37

   17 FunDec: ID LP VarList RP .

    $default  reduce using rule 17 (FunDec)


State 38

   19 VarList: ParamDec COMMA . VarList

    ID      shift, and go to state 24
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    VarDec           转到状态 27
    VarList          转到状态 56
    ParamDec         转到状态 29


State 39

   49 Exp: NOT . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 57


State 40

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


State 41

   56 Exp: FLOAT .

    $default  reduce using rule 56 (Exp)


State 42

   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 58

    $default  reduce using rule 54 (Exp)


State 43

   48 Exp: MINUS . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 59


State 44

   47 Exp: LP . Exp RP

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 60


State 45

   28 Stmt: RETURN . Exp SEMI

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 61


State 46

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 62


State 47

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 63


State 48

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 49

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 64


State 50

   24 StmtList: Stmt . StmtList

    NOT     shift, and go to state 39
    INT     shift, and go to state 40
    FLOAT   shift, and go to state 41
    ID      shift, and go to state 42
    MINUS   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 19
    RETURN  shift, and go to state 45
    IF      shift, and go to state 46
    WHILE   shift, and go to state 47

    $default  reduce using rule 25 (StmtList)

    CompSt    转到状态 48
    StmtList  转到状态 65
    Stmt      转到状态 50
    Exp       转到状态 51


State 51

   26 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76


State 52

   38 Dec: VarDec ASSIGNOP . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 77


State 53

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


State 54

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 24

    VarDec   转到状态 31
    DecList  转到状态 78
    Dec      转到状态 33


State 55

   16 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 79


State 56

   19 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 19 (VarList)


State 57

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76

    ASSIGNOP  [reduce using rule 49 (Exp)]
    RELOP     [reduce using rule 49 (Exp)]
    PLUS      [reduce using rule 49 (Exp)]
    MINUS     [reduce using rule 49 (Exp)]
    STAR      [reduce using rule 49 (Exp)]
    DIV       [reduce using rule 49 (Exp)]
    AND       [reduce using rule 49 (Exp)]
    OR        [reduce using rule 49 (Exp)]
    DOT       [reduce using rule 49 (Exp)]
    LB        [reduce using rule 49 (Exp)]
    $default  reduce using rule 49 (Exp)


State 58

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44
    RP     shift, and go to state 80

    Exp   转到状态 81
    Args  转到状态 82


State 59

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76

    ASSIGNOP  [reduce using rule 48 (Exp)]
    RELOP     [reduce using rule 48 (Exp)]
    PLUS      [reduce using rule 48 (Exp)]
    MINUS     [reduce using rule 48 (Exp)]
    STAR      [reduce using rule 48 (Exp)]
    DIV       [reduce using rule 48 (Exp)]
    AND       [reduce using rule 48 (Exp)]
    OR        [reduce using rule 48 (Exp)]
    DOT       [reduce using rule 48 (Exp)]
    LB        [reduce using rule 48 (Exp)]
    $default  reduce using rule 48 (Exp)


State 60

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    RP        shift, and go to state 83
    LB        shift, and go to state 76


State 61

   28 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76


State 62

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 85


State 63

   31 Stmt: WHILE LP . Exp RP Stmt

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 86


State 64

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 65

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 66

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 67

   39 Exp: Exp ASSIGNOP . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 87


State 68

   42 Exp: Exp RELOP . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 88


State 69

   43 Exp: Exp PLUS . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 89


State 70

   44 Exp: Exp MINUS . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 90


State 71

   45 Exp: Exp STAR . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 91


State 72

   46 Exp: Exp DIV . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 92


State 73

   40 Exp: Exp AND . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 93


State 74

   41 Exp: Exp OR . Exp

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 94


State 75

   53 Exp: Exp DOT . ID

    ID  shift, and go to state 95


State 76

   52 Exp: Exp LB . Exp RB

    NOT    shift, and go to state 39
    INT    shift, and go to state 40
    FLOAT  shift, and go to state 41
    ID     shift, and go to state 42
    MINUS  shift, and go to state 43
    LP     shift, and go to state 44

    Exp  转到状态 96


State 77

   38 Dec: VarDec ASSIGNOP Exp .
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76

    $default  reduce using rule 38 (Dec)


State 78

   36 DecList: Dec COMMA DecList .

    $default  reduce using rule 36 (DecList)


State 79

   16 VarDec: VarDec LB INT RB .

    $default  reduce using rule 16 (VarDec)


State 80

   51 Exp: ID LP RP .

    $default  reduce using rule 51 (Exp)


State 81

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID
   57 Args: Exp . COMMA Args
   58     | Exp .

    COMMA     shift, and go to state 97
    ASSIGNOP  shift, and go to state 67
    RELOP     shift, and go to state 68
    PLUS      shift, and go to state 69
    MINUS     shift, and go to state 70
    STAR      shift, and go to state 71
    DIV       shift, and go to state 72
    AND       shift, and go to state 73
    OR        shift, and go to state 74
    DOT       shift, and go to state 75
    LB        shift, and go to state 76

    $default  reduce using rule 58 (Args)


State 82

   50 Exp: ID LP Args . RP

    RP  shift, and go to state 98


State 83

   47 Exp: LP Exp RP .

    $default  reduce using rule 47 (Exp)


State 84

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 85
